<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/blury_background"
            android:scaleType="centerCrop"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h3"
                android:layout_marginTop="110dp"
                android:drawableStart="@drawable/ic_kleine_shape"
                android:drawablePadding="6dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintTop_toTopOf="parent"
                android:text="ARDecor "/>

            <TextView
                android:id="@+id/tvLetsRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h4"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvAppName"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                android:text="Let's Register"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="35sp"/>

            <TextView
                android:id="@+id/tvAlreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/h2"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintTop_toBottomOf="@id/tvLetsRegister"
                android:textAlignment="center"
                android:gravity="center"
                android:text="Already have an account? Login"
                />

            <EditText
                android:id="@+id/edEmailRegister"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guideLineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount"
                style="@style/editText"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:layout_marginTop="50dp"
                />

            <EditText
                android:id="@+id/edDisplayName"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guideLineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
                style="@style/editText"
                android:hint="@string/displayNameHint"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/edPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guideLineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/edDisplayName"
                style="@style/editText"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/edPasswordConfirm"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guideLineRegisterRight"
                app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
                style="@style/editText"
                android:hint="@string/passwordConfirmHint"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/buttonRegisterRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/mediumButtonHeight"
                style="@style/blueButtonStyle"
                app:layout_constraintTop_toBottomOf="@id/edPasswordConfirm"
                app:layout_constraintStart_toStartOf="@id/guideLineRegisterLeft"
                app:layout_constraintEnd_toEndOf="@id/guideLineRegisterRight"
                android:layout_marginTop="15dp"
                android:text="@string/register"
                app:spinning_bar_color="@color/white"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineRegisterLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLineRegisterRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>